--- a/client/styles/_logInScreen.scss
+++ b/client/styles/_logInScreen.scss
@@ -31,6 +31,126 @@
         border-left: $size solid $color;
     }
 }
+@mixin hexagonomicron ($sA) {
+$viewHeight: 100vh;
+$one: (1 / $sA * $viewHeight);
+$hexHeight:(.5774 / $sA * $viewHeight);
+$half: (.5 / $sA * $viewHeight);
+$hexMargin:(.1787 / $sA * $viewHeight);
+$hexBackground: ( .993042 / $sA * $viewHeight);
+$quarter: (.25 / $sA * $viewHeight);
+$minusQuarter: (-.25 / $sA * $viewHeight);
+$fifive: (.55 / $sA * $viewHeight);
+$hexBorder: (.07 / $sA * $viewHeight);
+$margin: .1vh;//(.1 / $sA * $viewHeight);
+$marginLeft:(5vh);
+$appWidth:147vh;
+$appHeight:95vh;
+$minusQuarterht: 99vh;
+$shelfWidth:160vh;
+$border: ($margin * 5);
+$hexTriangleSize: (.7071 / $sA * $viewHeight);
+$hexTriangleOffsetLeft: (.0764 / $sA * $viewHeight);
+$hexAfterWidth: (.86 / $sA * $viewHeight);
+$hexAfterHeight: ( .4965 / $sA * $viewHeight);
+$hexBottom: (-.353553 / $sA * $viewHeight);
+$hexBottomSize: (.098995 / $sA * $viewHeight);
+$hexMinusQuarter: (-.248261 / $sA * 100vh);
+        position: relative;
+        width: $one; 
+        height: $hexHeight;
+        margin: $hexMargin 0;
+        //background-image: url(../img/Finvarr.png);
+        //background-repeat: no-repeat;
+        background-size: auto $hexBackground;
+        background-position: center;
+        /* offset-x | offset-y | blur-radius | spread-radius | color */
+        //box-shadow: 0 0 2vh rgba(0,0,0,1);
+        border-left: solid $hexBorder #333333;
+        border-right: solid $hexBorder #333333;
+        &:after {
+            content: "";
+            position: absolute;
+            top: (.040415 / $sA * $viewHeight);
+            left: 0;
+            width: $hexAfterWidth;
+            height: $hexAfterHeight;
+            z-index: 2;
+            background: inherit;
+        }
+        img{
+            height:($hexHeight + $hexTriangleSize / 1.2);
+            width:$one * 1.05;
+            position:relative;
+            top:($hexMinusQuarter * 1.38);//-.248261 / 12 * 138vh
+            left:($hexMinusQuarter * .36);//-.248261 / 12 * 36vh
+            z-index: 2;
+        }
+        .top, .bottom{
+            position: absolute;
+            z-index: 1;
+            width: $hexTriangleSize;
+            height: $hexTriangleSize;
+            overflow: hidden;
+            -webkit-transform: scaleY(0.5774) rotate(-45deg);
+            -ms-transform: scaleY(0.5774) rotate(-45deg);
+            transform: scaleY(0.5774) rotate(-45deg);
+            background: inherit;
+            left: $hexTriangleOffsetLeft;
+            &:before, &:after{
+                content: "";
+                position: absolute;
+                width: $hexAfterWidth;
+                height: $hexAfterHeight;
+                -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
+                -ms-transform:      rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
+                transform:          rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
+                -webkit-transform-origin: 0 0;
+                -ms-transform-origin: 0 0;
+                transform-origin: 0 0;
+                background: inherit;
+            }
+        }
+        .top {
+          top: (-.353553 / $sA * 100vh);
+          border-top: solid $hexBottomSize #333333;
+          border-right: solid $hexBottomSize #333333;
+        }
+        .top:after {
+          background-position: center top;
+        }
+        .bottom {
+          bottom: $hexBottom;
+          border-bottom: solid $hexBottomSize #333333;
+          border-left: solid $hexBottomSize #333333;
+        }        
+        .bottom:after {
+          background-position: center bottom;
+        }
+}//mixin
+.selection_card_champion{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+    height:100%;
+    PADDING:2vh;
+}
+.selection_card_stats{
+    width:95vh;
+    height:100%;
+    display:flex;
+}
+.selection_card_hexagram{
+    @include hexagonomicron(10);
+    padding:1vh;
+}
+.attribute{
+    font-size: large;
+    font-weight: 900;
+}
+.card_hex_big{@include hexagonomicron(5)}
 #bandSelection{
     background:rgb(168, 149, 107);
     height: 100vh;
@@ -43,6 +163,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-position: center;
 }
 @mixin selection_hex_image {
     background-size: cover;
@@ -53,15 +174,15 @@
 }
 .selection_class_banner{
     @include selection_hex_image;
-    z-index:2;
+    z-index:3;
 }
 .selection_heroImg{
     @include selection_hex_image;
-    z-index:1;
+    z-index:2;
 }
 .selection_backward{
-    @include arrow(rgb(89, 204, 224),left,5vh);
-    z-index:2;
+    @include arrow(rgb(185, 216, 212),left,5vh);
+    z-index:3;
     top:-5vh;
     left:1vh;
     position:relative;
@@ -70,8 +191,25 @@
     transform: scale(1.2);
     @include arrow(rgb(92, 74, 24),left,7vh);
     border-left: none;
-    z-index:1;
+    z-index:2;
 }
+@mixin opacifier{
+    content: "";
+    opacity: 0.32;
+    left: 0;
+    width: 60vh;
+    height: 25vh;
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+    box-shadow: inset 0 0 1vh black, inset 0 0 2vh black, inset 0 0 3vh black, inset 0 0 4vh black, inset 0 0 5vh black;
+}
+#selection_guardian:after{background-image: url('../../img/classGuardian.png'); @include opacifier;top:0vh}
+#selection_shaper:after{background-image: url('../../img/classShaper.png'); @include opacifier;top:25vh}
+#selection_slayer:after{background-image: url('../../img/classSlayer.png'); @include opacifier;top:50vh}
+#selection_maelstrom:after{background-image: url('../../img/classMaelstrom.png'); @include opacifier;top:75vh}
 .selection_banner_shaper{background-image: url('../../img/classShaper.png');}
 .selection_banner_slayer{background-image: url('../../img/classSlayer.png');}
 .selection_banner_maelstrom{background-image: url('../../img/classMaelstrom.png');}
@@ -82,6 +220,43 @@
     height:100vh;
     width:95vh;
     background-color: rgb(107, 95, 68);
+}
+.selection_card_images{
+    width:95vh;
+    height:37vh;
+    display:flex;
+}
+#bandNamePlace{
+    box-shadow: inset 0 0 3vh black;
+    background:rgb(168, 149, 107);
+    display:flex;
+    height:100vh;
+    width:calc(100vw - 155vh);
+}
+.selection_card_skills{
+    width:100%;
+    height:63vh;
+    box-shadow: inset 0 0 3vh black;
+}
+#card_walk_white{background-image: url('../../img/walk_white.svg'); color:'black';}
+#card_walk_black{background-image: url('../../img/walk_black.svg'); color:'white';}
+
+#card_dodge_white{background-image: url('../../img/dodge_white.svg'); color:'black';}
+#card_dodge_black{background-image: url('../../img/dodge_black.svg'); color:'white';}
+
+#card_shield_white{background-image: url('../../img/shield_white.svg'); color:'black';}
+#card_shield_black{background-image: url('../../img/shield_black.svg'); color:'white';}
+
+#card_heart_white{background-image: url('../../img/heart_white.svg'); color:'black';}
+#card_heart_black{background-image: url('../../img/heart_black.svg'); color:'white';}
+.card_heroImg{
+    position: relative;
+    width: 22vh;
+    height: 21vh;
+    background-size: cover;
+    top: -7vh;
+    left: -3.5vh;
+    z-index: 3;
 }
 //#guardianSelect
 //#maelstormSelect
