--- a/client/styles/_logInScreen.css
+++ b/client/styles/_logInScreen.css
@@ -99,6 +99,19 @@
   font-weight: 900;
 }
 
+.card_attribute {
+  position: relative;
+  font-size: 6vh;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  top: -1.1vh;
+}
+
 .card_hex_big {
   position: relative;
   width: 20vh;
@@ -207,6 +220,7 @@
   background-position: center;
   width: 30%;
   height: 21vh;
+  z-index: 3;
   z-index: 2;
 }
 
@@ -334,8 +348,67 @@
   box-shadow: inset 0 0 3vh black;
   background: #a8956b;
   display: flex;
+  flex-wrap: wrap;
   height: 100vh;
   width: calc(100vw - 155vh);
+}
+
+#card_walk_white {
+  background-image: url("../../img/walk_white.svg");
+  color: black;
+  text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
+}
+
+#card_walk_black {
+  background-image: url("../../img/walk_black.svg");
+  color: white;
+  text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
+}
+
+#card_dodge_white {
+  background-image: url("../../img/dodge_white.svg");
+  color: black;
+  text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
+}
+
+#card_dodge_black {
+  background-image: url("../../img/dodge_black.svg");
+  color: white;
+  text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
+}
+
+#card_shield_white {
+  background-image: url("../../img/shield_white.svg");
+  color: black;
+  text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
+}
+
+#card_shield_black {
+  background-image: url("../../img/shield_black.svg");
+  color: white;
+  text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
+}
+
+#card_heart_white {
+  background-image: url("../../img/heart_white.svg");
+  color: black;
+  text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
+}
+
+#card_heart_black {
+  background-image: url("../../img/heart_black.svg");
+  color: white;
+  text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
+}
+
+.card_heroImg {
+  position: relative;
+  width: 22vh;
+  height: 21vh;
+  background-size: cover;
+  top: -7.5vh;
+  left: -3.5vh;
+  z-index: 3;
 }
 
 .selection_card_skills {
@@ -344,52 +417,278 @@
   box-shadow: inset 0 0 3vh black;
 }
 
-#card_walk_white {
-  background-image: url("../../img/walk_white.svg");
-  color: 'black';
+.card_skills {
+  box-shadow: inset 0 0 3vh black;
+  width: 100%;
+  height: 63vh;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-#card_walk_black {
-  background-image: url("../../img/walk_black.svg");
-  color: 'white';
-}
-
-#card_dodge_white {
-  background-image: url("../../img/dodge_white.svg");
-  color: 'black';
-}
-
-#card_dodge_black {
-  background-image: url("../../img/dodge_black.svg");
-  color: 'white';
-}
-
-#card_shield_white {
-  background-image: url("../../img/shield_white.svg");
-  color: 'black';
-}
-
-#card_shield_black {
-  background-image: url("../../img/shield_black.svg");
-  color: 'white';
-}
-
-#card_heart_white {
-  background-image: url("../../img/heart_white.svg");
-  color: 'black';
-}
-
-#card_heart_black {
-  background-image: url("../../img/heart_black.svg");
-  color: 'white';
-}
-
-.card_heroImg {
+.card_skills .card_tab {
+  width: 50%;
+  height: 10.5vh;
   position: relative;
-  width: 22vh;
-  height: 21vh;
+  top: 0;
+  border-right: 0.3vh solid #3a3131;
+  border-top: 0.3vh solid #3a3131;
+  border-left: 0.3vh solid #3a3131;
+}
+
+.card_skills .card_list {
+  width: 100%;
+  height: 52vh;
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow-y: hidden;
+}
+
+.skills_unit {
+  position: relative;
+  top: -63vh;
+  left: 0;
+}
+
+.unit_tab {
+  left: 50%;
+}
+
+.tab_behind {
+  border-bottom: 0.3vh solid #3a3131;
+  box-shadow: inset 0 0 3vh black;
+}
+
+.introductionInfo {
+  margin: 5% 7% 0 7%;
+  width: 86%;
+  height: 14vh;
+  color: white;
+  background: linear-gradient(0.25turn, darkolivegreen, #636044 20%, #636044 80%, darkolivegreen);
+  border-top: 0.8vw solid #866511;
+  border-bottom: 0.7vw solid #866511;
+  border-left: 0;
+  border-right: 0;
+  border-radius: 5%;
+  text-align: center;
+  font-size: 2vw;
+  font-weight: 500;
+}
+
+.introductionInfo:required {
+  box-shadow: none;
+}
+
+.bobo {
+  position: relative;
+  width: 16.66667vh;
+  height: 9.62333vh;
+  margin: 2.97833vh 0;
+  background-size: auto 16.5507vh;
+  background-position: center;
+  /* offset-x | offset-y | blur-radius | spread-radius | color */
+  border-left: solid 1.16667vh #333333;
+  border-right: solid 1.16667vh #333333;
+  color: black;
+  text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
+  background-color: blue;
+  color: #f1e3bb;
+  margin: 4vh auto;
+}
+
+.bobo p {
+  padding-top: 2vh;
+}
+
+.bobo:after {
+  content: "";
+  position: absolute;
+  top: 0.67358vh;
+  left: 0;
+  width: 14.33333vh;
+  height: 8.275vh;
+  z-index: 2;
+  background: inherit;
+}
+
+.bobo img {
+  height: 19.44417vh;
+  width: 17.5vh;
+  position: relative;
+  top: -5.71vh;
+  left: -1.48957vh;
+  z-index: 2;
+}
+
+.bobo .top, .bobo .bottom {
+  position: absolute;
+  z-index: 1;
+  width: 11.785vh;
+  height: 11.785vh;
+  overflow: hidden;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background: inherit;
+  left: 1.27333vh;
+}
+
+.bobo .top:before, .bobo .top:after, .bobo .bottom:before, .bobo .bottom:after {
+  content: "";
+  position: absolute;
+  width: 14.33333vh;
+  height: 8.275vh;
+  -webkit-transform: rotate(45deg) scaleY(1.7321) translateY(-4.13768vh);
+  -ms-transform: rotate(45deg) scaleY(1.7321) translateY(-4.13768vh);
+  transform: rotate(45deg) scaleY(1.7321) translateY(-4.13768vh);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background: inherit;
+}
+
+.bobo .top {
+  top: -5.89255vh;
+  border-top: solid 1.64992vh #333333;
+  border-right: solid 1.64992vh #333333;
+}
+
+.bobo .top:after {
+  background-position: center top;
+}
+
+.bobo .bottom {
+  bottom: -5.89255vh;
+  border-bottom: solid 1.64992vh #333333;
+  border-left: solid 1.64992vh #333333;
+}
+
+.bobo .bottom:after {
+  background-position: center bottom;
+}
+
+.bobo:hover {
+  box-shadow: 0;
+}
+
+#gameTypeForm {
+  width: calc(100vw - 155vh);
+  height: 63vh;
+}
+
+#bandDisplay {
+  width: calc(100vw - 155vh);
+  height: 27vh;
+  margin-top: 10vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#bandDisplay .chosen {
+  position: relative;
+  width: 16.66667vh;
+  height: 9.62333vh;
+  margin: 2.97833vh 0;
+  background-size: auto 16.5507vh;
+  background-position: center;
+  /* offset-x | offset-y | blur-radius | spread-radius | color */
+  border-left: solid 1.16667vh #333333;
+  border-right: solid 1.16667vh #333333;
+  box-shadow: 0 0 3vh black;
+}
+
+#bandDisplay .chosen:after {
+  content: "";
+  position: absolute;
+  top: 0.67358vh;
+  left: 0;
+  width: 14.33333vh;
+  height: 8.275vh;
+  z-index: 2;
+  background: inherit;
+}
+
+#bandDisplay .chosen img {
+  height: 19.44417vh;
+  width: 17.5vh;
+  position: relative;
+  top: -5.71vh;
+  left: -1.48957vh;
+  z-index: 2;
+}
+
+#bandDisplay .chosen .top, #bandDisplay .chosen .bottom {
+  position: absolute;
+  z-index: 1;
+  width: 11.785vh;
+  height: 11.785vh;
+  overflow: hidden;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background: inherit;
+  left: 1.27333vh;
+}
+
+#bandDisplay .chosen .top:before, #bandDisplay .chosen .top:after, #bandDisplay .chosen .bottom:before, #bandDisplay .chosen .bottom:after {
+  content: "";
+  position: absolute;
+  width: 14.33333vh;
+  height: 8.275vh;
+  -webkit-transform: rotate(45deg) scaleY(1.7321) translateY(-4.13768vh);
+  -ms-transform: rotate(45deg) scaleY(1.7321) translateY(-4.13768vh);
+  transform: rotate(45deg) scaleY(1.7321) translateY(-4.13768vh);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background: inherit;
+}
+
+#bandDisplay .chosen .top {
+  top: -5.89255vh;
+  border-top: solid 1.64992vh #333333;
+  border-right: solid 1.64992vh #333333;
+}
+
+#bandDisplay .chosen .top:after {
+  background-position: center top;
+}
+
+#bandDisplay .chosen .bottom {
+  bottom: -5.89255vh;
+  border-bottom: solid 1.64992vh #333333;
+  border-left: solid 1.64992vh #333333;
+}
+
+#bandDisplay .chosen .bottom:after {
+  background-position: center bottom;
+}
+
+#bandDisplay .chosen .card_heroImg {
   background-size: cover;
-  top: -7vh;
-  left: -3.5vh;
+  background-position: center;
+  width: 30%;
+  height: 21vh;
   z-index: 3;
+  width: 100%;
+  top: -6.5vh;
+  left: 0;
+}
+
+.ch_st {
+  top: 12vh;
+  left: 8vh;
+  position: relative;
+}
+
+.ch_nd {
+  top: -4vh;
+  left: 1vh;
+  position: relative;
+}
+
+.ch_rd {
+  top: 12vh;
+  left: -6vh;
+  position: relative;
 }
